@@ -1603,7 +1603,7 @@ forward_scan:		do
 	//{{{ setSelection() method
 	/**
 	 * Sets the selection. Nested and overlapping selections are merged
-	 * where possible.
+	 * where possible. Null elements of the array are ignored.
 	 * @param selection The new selection
 	 * since jEdit 3.2pre1
 	 */
